minor changes and removed some parentheses

--- a/03_toolchain.tex
+++ b/03_toolchain.tex
@@ -23,7 +23,7 @@ We decided to start with the implementation of the model. Prior steps such as de
 The modeler starts with the implementation/coding of the model. Since this is the most basic part of the IDE and the main interface for the user, this is the place to include the most relevant and crucial tools to support the user during the coding phase. These features are very diverse and range from very simple and basic ones like code completion, syntax highlighting, automatic warnings and action items to much more complex and specialized ones that belongs to the requirements from chapter \ref{sec:vision_for_a_dsl}. One of these very specific features are domain specific semantic datatypes and the handling of typical operations as explained earlier. In order to achieve these features, it is necessary to define important semantical aspects of entities and datatypes used in the model.
 
 
-A very common approach to define the semantics in a formal and machine readable way (which is important for later code generation) are ontologies\footnote{see \nameref{sec:app:ontology} in the appendix for a short explanation of ontologies}. The reasons for this are discussed in \autocite{toolchain:protege_onto}, \autocite{toolchain:gruber} and \autocite{toolchain:musen}. And also in the environmental domain ontologies are often used and are a very common way to define semantics of entities. \autocite{dsl:muetzelfeldt}, \autocite{Villa2009577}
+A very common approach to define the semantics in a formal and machine readable way, which is important for later code generation, are ontologies\footnote{see \nameref{sec:app:ontology} in the appendix for a short explanation of ontologies}. The reasons for this are discussed in \autocite{toolchain:protege_onto}, \autocite{toolchain:gruber} and \autocite{toolchain:musen}. And also in the environmental domain ontologies are often used and are a very common way to define semantics of entities. \autocite{dsl:muetzelfeldt}, \autocite{Villa2009577}
 
 
 Therefore the semantics of every used entity or datatype must be defined in an ontology which then can be used to automatically check consistency of the model, and that allows the IDE to handle typical operations like automatic unit conversions. Actually there are a set of projects that has focused on this topic  and that developed a set of ontologies that define the semantic of entities in the environmental domain.  QUDT, which stands for Quantities, Units, Dimensions and Data Types in OWL and XML \autocite{toolchain:qudt} is one of these projects and one of it’s goals is to ``to provide a unified model of, measurable quantities, units for measuring different kinds of quantities, the numerical values of quantities in different units of measure and the data structures and data types used to store and manipulate these objects in software'' \autocite{toolchain:qudt}. Another, more famous project is Nasa SWEET (Semantic Web for Earth and Environment Technologies) \autocite{toolchain:nasa_sweet} which provides a very extensive set of ontologies and ``include several thousand terms, spanning a broad extent of earth system science and related concepts''\autocite{nasa_sweet_guide}.
