--- a/02a_similie.tex
+++ b/02a_similie.tex
@@ -1,11 +1,11 @@
 \subsection{Simile}\label{sec:similie}
 \par
-Simile is a visual modelling environment, developed originally for the dynamic modelling of ecological and environmental systems, which supports a wide range of ways of representing space, it combines a System Dynamics and an object-based approach. System Dynamics is based on a conceptualization of dynamic systems in terms of stocks and flows, variables and influences. \autocite{dsl:simile-simulistics}
+Simile is a visual modelling environment, developed originally for the dynamic modelling of ecological and environmental systems, which supports a wide range of ways of representing space, it combines a System Dynamics and an object-based approach. System Dynamics is based on a conceptualization of dynamic systems in terms of stocks and flows, variables and influences \autocite{dsl:simile-simulistics}.
 \par
-Like many other modelling frameworks or software tools, simile supports component-based modelling, which helps to divide a complex system to small modulars, as well as System Dynamics modelling, which is a methodology, mainly used to analyze complex mathematical models and problems. Simile is already a successful modelling software, and it has already been adopted in various scientific researches of agricultural or geographical fields in many different countries. With Simile, model developers are also able to integrate knowledges from various studies, guide the research processes and make prediction. Besides that, they can also share the models they have created over the internet, since the models are save as a text file with a structured format. \autocite{dsl:simile-muetzelfeldt} It means that the models created by Simile may be reusable by other modelling framework for further development.
+Like many other modelling frameworks or software tools, simile supports component-based modelling, which helps to divide a complex system to small modulars, as well as System Dynamics modelling, which is a methodology, mainly used to analyze complex mathematical models and problems. Simile is already a successful modelling software, and it has already been adopted in various scientific researches of agricultural or geographical fields in many different countries. With Simile, model developers are also able to integrate knowledges from various studies, guide the research processes and make prediction. Besides that, they can also share the models they have created over the internet, since the models are save as a text file with a structured format \autocite{dsl:simile-muetzelfeldt}. It means that the models created by Simile may be reusable by other modelling framework for further development.
 \subsubsection{Technical implementation}
 \par
-Simile is capable of handling different modelling types, which are most commonly used by model developers, such as system dynamics, object oriented models, modular models, population dynamics models, etc. \autocite{dsl:simile-simulistics} It comes up with a set of low-level primitive modelling elements that enable various types of models to be constructed, without using the terms and concepts individually associated with each model type. \autocite{dsl:simile-muetzelfeldt} The simile modelling language consists of 12 basic modelling elements. In this chapter, we will focus on how these elements can be applied to system dynamics and modular modelling.
+Simile is capable of handling different modelling types, which are most commonly used by model developers, such as system dynamics, object oriented models, modular models, population dynamics models, etc \autocite{dsl:simile-simulistics}. It comes up with a set of low-level primitive modelling elements that enable various types of models to be constructed, without using the terms and concepts individually associated with each model type \autocite{dsl:simile-muetzelfeldt}. The simile modelling language consists of 12 basic modelling elements. In this chapter, we will focus on how these elements can be applied to system dynamics and modular modelling.
 \par
 As we have mentioned above, system dynamic methodology is used to simulate and analyze the behaviors of a complex system. To demonstrate a system dynamic scenario, we often use a stock and flow diagram, which presents the relationship between the volume of a stock and the flows coming into or out of the stock. The volume of the stock accumulates or depletes over time, because of the incoming and outgoing flows. The basic modelling elements from Simile can handle this kind of modelling and provide a visualization tool for users to analyze the changes of the stock in a quantitative way. Simile provide four modelling elements for system dynamics: compartment, flow arrow, variable and influence arrow. The compartment element is used to describe a stock and its status, such as the credit of a bank account, the amount of water volume, etc. Each compartment element of simile should be initialize with a numeric value, which could be calculated with other variables or constants. The flow arrow is visually represented by an incoming or outgoing arrow of a compartment. They cause the increment and decrement of the amount of substances in the compartment. The flow arrow may also connect two different compartment, which means that the substances of one compartment will flow into another compartment. The value of the flow arrow can be a constant or a mathematical expression. The variable element of simile contains a value of a constant or a function. In Simile modeling environment, it serves as a parameter, an intermediate variable, an output variable, etc, for example, it can be the input or output parameter of a component. The influence flow connects two different modeling elements. It represents that the value of one element will be used to calculate the other.
 \par
@@ -43,11 +43,11 @@ The Simile modelling software offers the following benefits to the model develop
 \item 
 The user-friendly graphic interface gives the model developers an effective and intuitive way to create models. It helps to save time and improves the quality and reliability of the created models.
 \item
-It simplifies documentation of models. The Simile models are largely self-documented by simply attaching comments to model elements. \autocite{dsl:simile-muetzelfeldt} This feature avoids the inconsistency between documents and models. 
+It simplifies documentation of models. The Simile models are largely self-documented by simply attaching comments to model elements \autocite{dsl:simile-muetzelfeldt}. This feature avoids the inconsistency between documents and models. 
 \item
 Simile allows models to be saved to files and loaded from files. This feature improves the reusability of submodels and makes testing of submodel easier, since a submodel can be separated from the whole model and saved to a new file. In this way, the separated submodel will be regarded as a stand-alone model and possible existing problems are easier to identify.
 \item
-Compared to other System Dynamics modelling environments, Simile is able to specify multiple instances of an entity. \autocite{dsl:simile-muetzelfeldt} Unlike the conventional way to create an array that holds some instances of a submodel, Simile simply groups existing modelling elements together for a submodel and then specify the instances of these submodels.
+Compared to other System Dynamics modelling environments, Simile is able to specify multiple instances of an entity \autocite{dsl:simile-muetzelfeldt}. Unlike the conventional way to create an array that holds some instances of a submodel, Simile simply groups existing modelling elements together for a submodel and then specify the instances of these submodels.
 \item 
 Simile has the ability to link elements declared in the model with entities declared in distributed ontologies, thus reducing the risk of ambiguities and misuse of data, which are quite frequent in this modelling framework.
 \end{itemize}
@@ -59,9 +59,9 @@ Despite of the advanced features of Simile, it also comes with some disadvantage
 \item 
 The Simile models need to adhere to a standard and common declarative modelling language, which currently exists only in some domains.
 \item
-Although Simile provides several primitive modelling elements for generic modelling, it is still desirable, that more experienced model developers could work at a lower level to allow different domain-specific language to be combined in one model. The conceptual gap between modellers and the modelling language should be narrowed. \autocite{dsl:simile-muetzelfeldt}
+Although Simile provides several primitive modelling elements for generic modelling, it is still desirable, that more experienced model developers could work at a lower level to allow different domain-specific language to be combined in one model. The conceptual gap between modellers and the modelling language should be narrowed \autocite{dsl:simile-muetzelfeldt}.
 \item
-Simile does not reflect all the properties of object oriented component based modelling.  In Simile, all attributes and variables of a subcomponent are visible to users. This violates terms of object oriented modelling, since some attributes should be hidden to the external world, or the access should be restricted. Furthermore, Simile models does not have concepts of inheritance and specialization. \autocite{dsl:simile-muetzelfeldt}
+Simile does not reflect all the properties of object oriented component based modelling.  In Simile, all attributes and variables of a subcomponent are visible to users. This violates terms of object oriented modelling, since some attributes should be hidden to the external world, or the access should be restricted. Furthermore, Simile models does not have concepts of inheritance and specialization \autocite{dsl:simile-muetzelfeldt}.
 \item
 The Simile models are currently not able to be seamlessly integrated with a geographic information system.  Compatible problems have to be solved.
 \item 
