--- a/02c_oms.tex
+++ b/02c_oms.tex
@@ -8,7 +8,7 @@ OMS stands for Object Modeling System designed for environmental modeling. It is
 \par
 OMS supports component based software engineering. Models and components are treated as objects in OMS. An individual component is a web service or a module that encapsulate a set of related functions separated from the surrounding framework environment \autocite{dsl:oms-component_based}. The OMS framework introduces a new approach of component modeling. In OMS framework, components are normal classes enriched with Java language level annotations. A normal class consists of fields and methods, which will be supplemented by language level annotations. The annotations are used to find the entry point of data flow and method execution. The computational method of a component will have a tag “@Execute” and data flows are indicated by the tags “@In” and “@Out”.
 The following example shows parts of a simple component of a bank account, whose financial credit varies year to year.
-\begin{verbatim}
+\begin{lstlisting}
 //1. First we have to import the necessary annotation interfaces.
 import oms3.annotations.*;
 import oms3.control.Iteration;
@@ -19,8 +19,7 @@ import oms3.control.Iteration;
 @In public double account;
 @In public int year;
 @In public String output;
-// 3. We can declare a computational function with the tag 
-“@Execute”, which processes the data flow.
+// 3. We can declare a computational function with the tag "@Execute", which processes the data flow.
 @Execute
 public void compute() {
 	 if (i<year){
@@ -32,15 +31,12 @@ public void compute() {
 	 }
 	 i++;
 }
-//4. The annotation “@Finalize” indicates the framework that the 
-following method will be executed at last to finalize the processing 
-of data flow.
+//4. The annotation "@Finalize" indicates the framework that the following method will be executed at last to finalize the processing of data flow.
 @Finalize
-	public void done() {
+public void done() {
 	w.close();
-	}
 }
-\end{verbatim}
+\end{lstlisting}
 \par
 The OMS framework provides simulations features to test and analyze the models, since it makes use of the advantages domain specific language, which are provided by the Groovy programming language. An OMS simulation provides all the necessary resources to run a model and it consists of following parts:
 \begin{itemize}
