--- a/02c_oms.tex
+++ b/02c_oms.tex
@@ -8,7 +8,7 @@ OMS stands for Object Modeling System designed for environmental modeling. It is
 \par
 OMS supports component based software engineering. Models and components are treated as objects in OMS. An individual component is a web service or a module that encapsulate a set of related functions separated from the surrounding framework environment \autocite{dsl:oms-component_based}. The OMS framework introduces a new approach of component modeling. In OMS framework, components are normal classes enriched with Java language level annotations. A normal class consists of fields and methods, which will be supplemented by language level annotations. The annotations are used to find the entry point of data flow and method execution. The computational method of a component will have a tag “@Execute” and data flows are indicated by the tags “@In” and “@Out”.
 The following example shows parts of a simple component of a bank account, whose financial credit varies year to year.
-\begin{lstlisting}
+\begin{lstlisting}[language=Java]
 //1. First we have to import the necessary annotation interfaces.
 import oms3.annotations.*;
 import oms3.control.Iteration;
@@ -47,7 +47,7 @@ The OMS framework provides simulations features to test and analyze the models, 
 \end{itemize}
 \par
 The following is a part of a simple simulation file to run the model “bank account”:
-\begin{lstlisting}
+\begin{lstlisting}[language=Java]
 //1. We have to import the necessary library.
 import static oms3.SimBuilder.instance as OMS3
 
@@ -73,7 +73,7 @@ OMS3.sim (name:"Konto"){
 The following figure shows the result after running the simulation:
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\textwidth]{pics/oms/Figure9.png}
+	\includegraphics[width=0.8\textwidth]{pics/oms/Figure9.png}
 	\caption{Result after running the model “bank account”
  \label{fig:Result_Bank_Account}}	
 \end{figure}
@@ -81,7 +81,7 @@ The following figure shows the result after running the simulation:
 OMS also provides diagram visualization features for the simulation results for better understanding and evaluation. The following figure shows the diagram of the status changes of the bank account of different years.
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\textwidth]{pics/oms/Figure10.png}
+	\includegraphics[width=0.8\textwidth]{pics/oms/Figure10.png}
 	\caption{Visualization of the status of a bank account
  \label{fig:Visualization_Bank_Account}}	
 \end{figure}
@@ -91,7 +91,7 @@ The new version of the OMS framework 3.1 supports multiple threading. Each OMS3 
 \par
 The OMS framework provides the following benefits for model developers: \autocite{dsl:oms-ahuja}
 \begin{itemize}
-\item The OMS framework enables efficient transfer of technology, because of the  integration of various software tools in one platform. Due to the common modeling platform and common user interface, the OMS will reduce the start-up time of model development and lower training costs of users.
+\item The OMS framework enables efficient transfer of technology, because of the  integration of various software tools in one platform. Due to the common modeling platform and common user interface, OMS will reduce the start-up time of model development and lower training costs of users.
 
 \item The OMS framework reduces the costs of developing new software technologies. With OMS, model developers can put scientific knowledge into packages as modules in OMS to build new customized software packages at a small fraction of costs.
 
