--- a/03_toolchain.tex
+++ b/03_toolchain.tex
@@ -7,7 +7,7 @@ The overall idea on how to achieve a toolchain that fully supports the requireme
 	\caption{modeling workflow \label{fig:modeling_workflow}	}
 \end{figure}
 
-A very extensive discussion of a modeling process can be found in \autocite{Jakeman2006602}. Hence this article targets the quality of the model process itself and does not take into account how this workflow can be supported by tools, we decided to take a much more simpler modelling workflow that is more suitable and based on the steps necessary using an IDE for the modelling process. Picture \ref{fig:modeling_workflow} depicts this simplified modeling workflow.
+A very extensive discussion of a modeling process can be found in \autocite{Jakeman2006602}. Hence this article targets the quality of the model process itself and does not take into account how this workflow can be supported by tools, we decided to take a much more simpler modelling workflow that is more suitable and based on the steps necessary using an IDE for the modelling process. Picture \vref{fig:modeling_workflow} depicts this simplified modeling workflow.
 
 
 We decided to start with the implementation of the model. Prior steps such as defining the model purpose, specifying model context and so on, like they are recommended in \autocite{Jakeman2006602} are left out intentionally in fact we want to emphasize the use of the IDE and to concentrate on the requirements derived from chapter~\ref{sec:vision_for_a_dsl}. In the following sections we want to explain the different steps and what features the IDE can offer to support the user in more detail. 
