--- a/06_appendix.tex
+++ b/06_appendix.tex
@@ -4,8 +4,8 @@
 \par
 A domain-specific language (DSL), in contrast to general purpose languages, is specialized in a selected application domain. Only typical tasks from this domain can often be solved with DSL, but due to highly specialized language elements with little effort and using the natural concepts from the application domain.
 \par
-The source code of such languages can be later translated automatically into the source code of a general purpose language like Java, C\#, C++ or other. The advantage is that the language scope of the DSL because of the specialization to a domain is much smaller, in comparison to a general purpose language. The comparison between the two cases can be seen in figure \ref{fig:dsl}. In extreme cases, instead of the programmer the application expert could write the required program \autocite{appendix:dsl}.
-\begin{figure}[h]
+The source code of such languages can be later translated automatically into the source code of a general purpose language like Java, C\#, C++ or other. The advantage is that the language scope of the DSL because of the specialization to a domain is much smaller, in comparison to a general purpose language. The comparison between the two cases can be seen in figure \vref{fig:dsl}. In extreme cases, instead of the programmer the application expert could write the required program \autocite{appendix:dsl}.
+\begin{figure}[htbp]
 	\centering
 	\includegraphics[width=0.65\textwidth]{pics/appendix/dsl.png}
 	\caption{Comparison of the development process with a DSL and a general purpose language.  \label{fig:dsl}}	
@@ -16,8 +16,8 @@ For the development, maintenance and continuous adaptation of the DSL, experts a
 
 \section{Definition of ontology}\label{sec:app:ontology}
 \par
-Ontologies enable or improve the communication between computer systems, computer systems and humans, but also between people in a given domain. Ontology consists of mostly a defined basic vocabulary, definitions and entities that build on this basic vocabulary and a description of the existing relations among each other. The following figure \ref{fig:semiotic_triangle} illustrates the interaction between words (or more generally symbols), concepts and real things in the world \autocite{appendix:ontology}.
-\begin{figure}[h]
+Ontologies enable or improve the communication between computer systems, computer systems and humans, but also between people in a given domain. Ontology consists of mostly a defined basic vocabulary, definitions and entities that build on this basic vocabulary and a description of the existing relations among each other. The following figure \vref{fig:semiotic_triangle} illustrates the interaction between words (or more generally symbols), concepts and real things in the world \autocite{appendix:ontology}.
+\begin{figure}[htbp]
 	\centering
 	\includegraphics[width=0.65\textwidth]{pics/appendix/onto.png}
 	\caption{Semiotic triangle \label{fig:semiotic_triangle}}	
