changed DSL's to DSLs when plural

--- a/05_conclusion.tex
+++ b/05_conclusion.tex
@@ -1,7 +1,7 @@
 %TODO die unterkapitel hier nicht zu nummerien ist evt sinnvoll?
 \chapter{Conclusion}
 \par
-Before discussing the feasibility of the single aspects we have outlined so far, we want to resume in brief the main idea behind the vision for DSL's and the outlined points so far.
+Before discussing the feasibility of the single aspects we have outlined so far, we want to resume in brief the main idea behind the vision for DSLs and the outlined points so far.
 \par
 Environmental modelers are nowadays forced, to implement their models with standard programming languages. Since they are often not familiar with designing and handling large software projects and the programming itself, this is a very time consuming process. This leads to poor implemented models, that are inefficient, not stable and not exchangeable.
 \par
